made the table for past week page. Also found a decent fix for an overflow problem on the past week page.

--- a/static/style.css
+++ b/static/style.css
@@ -19,11 +19,12 @@ li, a {
 }
 
 header {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     padding: 30px 10%;
     justify-content: space-between;
     background-color: #24252A;
+    width: 100%;
 }
 
 .logo {
@@ -229,4 +230,16 @@ Also set div's max dimensions according the images' width and height" */
     object-fit: cover;
     background-color:rgba(0,0,0, 0.6);
 }
+
+/* css for the past themes page */
+table {
+    border: 2px solid black;
+    width: 100%;
+    overflow: hidden;
+}
+
+tr {
+    width: 100%;
+}
+
 
